<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_social"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_social" />
        <item
            android:id="@+id/nav_order_info"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_order_information" />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_contactus" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/menu_login" />
    </group>
</menu>