<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tvHeaderCode"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_header_code"
        android:textStyle="bold"
        android:padding="10dp"/>
    <TextView
        android:id="@+id/tvHeaderCategory"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_header_category"
        android:textStyle="bold"
        android:padding="10dp"/>
    <TextView
        android:id="@+id/tvHeaderPrice"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_header_price"
        android:textStyle="bold"
        android:padding="10dp"/>
    <TextView
        android:id="@+id/tvHeaderOrderAt"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_header_order_at"
        android:textStyle="bold"
        android:padding="10dp"/>
    <TextView
        android:id="@+id/tvHeaderStatus"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_header_order_status"
        android:textStyle="bold"
        android:padding="10dp"/>
</LinearLayout>