<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="fpt.aptech.projectcard.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_social"
        android:name="fpt.aptech.projectcard.ui.social.SocialFragment"
        android:label="@string/menu_social"
        tools:layout="@layout/fragment_social" />

    <fragment
        android:id="@+id/nav_order_info"
        android:name="fpt.aptech.projectcard.ui.orderInfo.OrderInfoFragment"
        android:label="@string/menu_order_information"
        tools:layout="@layout/fragment_order_info" />

    <fragment
        android:id="@+id/nav_contactus"
        android:name="fpt.aptech.projectcard.ui.contactus.ContactUsFragment"
        android:label="@string/menu_contactus"
        tools:layout="@layout/fragment_contact_us" />

</navigation>