<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/lightBlueBackground"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:id="@+id/frmContactUs"
    tools:context=".ui.contactus.ContactUsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/intro_header_contact_us"
                    android:textColor="@color/whiteTextColor" />

                <ImageView
                    android:id="@+id/imgSocial"
                    android:background="@drawable/ic_login_hero"
                    android:layout_width="470px"
                    android:layout_height="470px"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <!-- Button type spinner -->
                    <LinearLayout
                        android:id="@+id/textInputBtnSpinner"
                        style="@style/parent"
                        android:orientation="vertical"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <TextView
                            style="@style/viewParent"
                            android:layout_marginBottom="5dp"
                            android:text="@string/txt_to_mail"/>

                        <EditText
                            android:id="@+id/editEmailReceiver"
                            style="@style/modifiedEditText"
                            android:text="@string/non_ed_mail_to"
                            android:inputType="none"
                            android:focusable="false"
                            android:maxLines="1"
                            tools:ignore="TextFields" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/textInputUrlName"
                        style="@style/parent"
                        android:orientation="vertical"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <TextView
                            style="@style/viewParent"
                            android:text="@string/ed_title_mail"/>

                        <EditText
                            android:id="@+id/editTitleMail"
                            style="@style/modifiedEditText"
                            android:hint="@string/ed_title_mail"
                            android:inputType="text"
                            android:maxLines="1" />
                    </LinearLayout>

                    <!-- URL Link -->
                    <LinearLayout
                        android:id="@+id/textInputUrlLink"
                        style="@style/parent"
                        android:orientation="vertical"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <TextView
                            style="@style/viewParent"
                            android:text="@string/txt_content_mail"/>

                        <EditText
                            android:id="@+id/editContentMail"
                            android:layout_height="fill_parent"
                            style="@style/modifiedEditText"
                            android:gravity="top"
                            android:hint="@string/ed_content_mail"
                            android:maxLines="10" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btnSendMail"
                        style="@style/updateButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:layout_marginBottom="@dimen/loginViewsMargin"
                        android:text="@string/btn_send_mail" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>