<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/lightBlueBackground"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:id="@+id/frmSocialNWeb"
    tools:context=".ui.social.SocialFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/intro_header_social_web_text"
                    android:textColor="@color/whiteTextColor" />

                <ImageView
                    android:id="@+id/imgSocial"
                    android:background="@drawable/ic_login_hero"
                    android:layout_width="470px"
                    android:layout_height="470px"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <!-- Button type spinner -->
                    <LinearLayout
                        android:id="@+id/textInputBtnSpinner"
                        style="@style/parent"
                        android:orientation="vertical"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <TextView
                            style="@style/viewParent"
                            android:layout_marginBottom="5dp"
                            android:text="@string/sp_url_type"/>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_corner"
                            android:backgroundTint="@color/cardview_shadow_start_color">

                            <Spinner
                                android:id="@+id/spUrlType"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/Widget.AppCompat.DropDownItem.Spinner"
                                android:dropDownVerticalOffset="65dp" />
                        </RelativeLayout>
                    </LinearLayout>

                    <!-- URL name -->
                    <LinearLayout
                        android:id="@+id/textInputUrlName"
                        style="@style/parent"
                        android:orientation="vertical"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <TextView
                            android:id="@+id/txtUrlName"
                            style="@style/viewParent"
                            android:text="@string/txt_url_name"/>

                        <EditText
                            android:id="@+id/editUrlName"
                            style="@style/modifiedEditText"
                            android:hint="@string/ed_hint_url_name"
                            android:inputType="textPersonName"
                            android:maxLines="1" />
                    </LinearLayout>

                    <!-- URL Link -->
                    <LinearLayout
                        android:id="@+id/textInputUrlLink"
                        style="@style/parent"
                        android:orientation="vertical"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <TextView
                            android:id="@+id/txtUrlLink"
                            style="@style/viewParent"
                            android:text="@string/txt_url_link"/>

                        <EditText
                            android:id="@+id/editUrlLink"
                            style="@style/modifiedEditText"
                            android:hint="@string/ed_hint_url_link"
                            android:maxLines="1" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btnSave_UpdateURL"
                        style="@style/updateButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:layout_marginBottom="@dimen/loginViewsMargin"
                        android:text="@string/btn_add_URL" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="200dp"
        android:adjustViewBounds="false"
        android:id="@+id/backHomeClick"
        android:src="@drawable/ic_back_img" />

</RelativeLayout>